<resources>
    <string name="app_name">KARABA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="show_commands">My Orders</string>
    <string name="my_commands">Orders List</string>
    <string name="title_activity_my_commands">Orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="restaurant_name_sample">CASTAS</string>

    <!--<strrestaurant_namename="title_activity_food_details">FoodDetailsActivity</string>-->

    <string name="network_error">Network Error. Press the Button to try again</string>
    <string name="try_again">Try Again</string>
    <string name="sys_error">Sorry for the disconvenience, The server is encountering an Error.</string>
    <string name="total">TOTAL:</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="months_of_year">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="title_activity_login">LOGIN</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="i_login">Login</string>
    <string name="there_is_no_command">There is no command in this category yet.</string>
    <string name="last_update_content">29 Jan 23:04</string>
    <string name="content_on_loading">Please wait... </string>
    <string name="contact">Contact</string>
    <string name="title_activity_command_details">Command Details</string>
    <string name="your_contact">Your contact</string>
    <string name="action_logout">Logout</string>
    <string name="today">Today</string>
    <string name="action_cancel">ANNULER</string>
    <string name="press_again_to_exit">Please, double press to exit.</string>
    <string name="restaurant_login">RESTAURANT - LOGIN</string>
    <string name="username">Username</string>
    <string name="sent_to_cooking">Thanks for Sending the food at cooking process.</string>
    <string name="ireturn">Return</string>
    <string name="select_shipping_man">Select Shipping man</string>
    <string name="there_is_no_shipping_man">Sorry ! No - Shipping - Man Available</string>
    <string name="please_select_shipping_man">Please select a shipping man</string>
    <string name="sent_to_delivering">Thanks for Sending the food at delivering process.</string>
    <string name="command_new">You have a new command</string>
    <string name="waiting">WAITING</string>
    <string name="cooking">COOKING</string>
    <string name="shipping">SHIPPING</string>
    <string name="delivered">DELIVERED</string>
    <string name="others">OTHERS</string>
    <string name="title_waiting">Waiting</string>
    <string name="title_others">Others</string>
    <string name="title_delivered">Delivered</string>
    <string name="title_shipping">Shipping</string>
    <string name="title_cooking">Cooking</string>
    <string name="your_quartier">District</string>
    <string name="client_contact">Client Contact</string>
    <string name="kaba_man">KabaMan</string>
    <string name="kaba_man_phone">KabaMan Phone</string>
    <string name="kaba_man_photo">Photo</string>
    <string name="statistics_of_restaurant">Statistiques du restaurant</string>
    <string name="quantity_sold">Orders</string>
    <string name="price_sold">Price</string>
    <string name="quantity_sold_value">--</string>
    <string name="price_sold_value">---</string>
    <string name="actions_of_restaurant">My Actions</string>
    <string name="menu_stats">Statistics</string>
    <string name="is_open">opened</string>
    <string name="is_opened">Opened</string>
    <string name="is_closed">Closed</string>
    <string name="cancel_reason">Please Select the reason of your action:</string>
    <string name="action_confirm">Confirm</string>
    <string name="stats_activity">SELLS STATISTICS</string>
    <string name="customer_adress_near">Not far from</string>
    <string name="last_update">Last Update :</string>

</resources>
